--- a/cs4756_final_project copy.ipynb
+++ b/cs4756_final_project copy.ipynb
@@ -137,6 +137,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train with MLP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -151,6 +158,52 @@
     }
    ],
    "source": [
+    "# from stable_baselines3 import PPO, A2C\n",
+    "# import traceback\n",
+    "# import sys\n",
+    "\n",
+    "# screen = pygame.display.set_mode((WIDTH,HEIGHT))\n",
+    "\n",
+    "\n",
+    "# env = SnakeEnv()\n",
+    "\n",
+    "# try:\n",
+    "#     model = A2C('MlpPolicy', env, learning_rate=0.0004, gamma=0.80, gae_lambda=0.95, max_grad_norm=0.5, verbose=0)\n",
+    "\n",
+    "#     #policy, env, learning_rate=0.0003, n_steps=2048, batch_size=64, n_epochs=10, gamma=0.99, gae_lambda=0.95, clip_range=0.2,\n",
+    "#     #clip_range_vf=None, normalize_advantage=True, ent_coef=0.0, vf_coef=0.5, max_grad_norm=0.5, use_sde=False, sde_sample_freq=-1,\n",
+    "#     #target_kl=None, stats_window_size=100, tensorboard_log=None, policy_kwargs=None, verbose=0, seed=None, device='auto', _init_setup_model=True\n",
+    "\n",
+    "#     #model.learn(total_timesteps=500000, callback=None, log_interval=5, tb_log_name='PPO', reset_num_timesteps=True, progress_bar=True)\n",
+    "\n",
+    "#     \"\"\"\n",
+    "#     gamma = A higher gamma value (e.g., 0.99) means that the agent considers future rewards more heavily, which can lead to a longer-term focus in its learning. Conversely, a lower gamma value (e.g., 0.9) makes the agent prioritize immediate rewards.\n",
+    "#     gae_lambda = is the factor used for trade-off between bias and variance when estimating advantages with the Generalized Advantage Estimator (GAE). GAE is used to estimate how much better or worse taking a specific action is compared to following the current policy. A higher gae_lambda value (e.g., 0.95) reduces bias but may increase variance, while a lower value reduces variance but may introduce bias into the advantage estimates.\n",
+    "#     max_grad_norm = is the maximum allowed value for gradient clipping during the training process. Gradient clipping is a technique used to prevent exploding gradients, which can lead to unstable training. If the magnitude of the gradients exceeds this value, they are scaled down to ensure they do not become too large.\n",
+    "#     \"\"\"\n",
+    "\n",
+    "# except Exception as e:\n",
+    "#     exc_type, exc_obj, tb = sys.exc_info()\n",
+    "#     line_number = tb.tb_lineno\n",
+    "#     print(\"!Error at\", line_number,\"th Line\")\n",
+    "#     traceback.print_exc()\n",
+    "#     pygame.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train with LSTM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sb3_contrib import RecurrentPPO\n",
     "from stable_baselines3 import PPO, A2C\n",
     "import traceback\n",
     "import sys\n",
@@ -161,13 +214,26 @@
     "env = SnakeEnv()\n",
     "\n",
     "try:\n",
-    "    model = A2C('MlpPolicy', env, learning_rate=0.0004, gamma=0.80, gae_lambda=0.95, max_grad_norm=0.5, verbose=0)\n",
+    "    model = RecurrentPPO(\n",
+    "        \"MlpLstmPolicy\",  # LSTM-based policy\n",
+    "        env,\n",
+    "        learning_rate=0.0004,\n",
+    "        gamma=0.99,\n",
+    "        gae_lambda=0.95,\n",
+    "        max_grad_norm=0.5,\n",
+    "        verbose=0,\n",
+    "        policy_kwargs=dict(\n",
+    "            lstm_hidden_size=256,  # Size of LSTM hidden layer\n",
+    "            n_lstm_layers=1,  # Number of LSTM layers\n",
+    "            shared_lstm=False,  # Separate LSTM layers for policy and value\n",
+    "        )\n",
+    "    )\n",
     "\n",
     "    #policy, env, learning_rate=0.0003, n_steps=2048, batch_size=64, n_epochs=10, gamma=0.99, gae_lambda=0.95, clip_range=0.2,\n",
     "    #clip_range_vf=None, normalize_advantage=True, ent_coef=0.0, vf_coef=0.5, max_grad_norm=0.5, use_sde=False, sde_sample_freq=-1,\n",
     "    #target_kl=None, stats_window_size=100, tensorboard_log=None, policy_kwargs=None, verbose=0, seed=None, device='auto', _init_setup_model=True\n",
     "\n",
-    "    #model.learn(total_timesteps=500000, callback=None, log_interval=5, tb_log_name='PPO', reset_num_timesteps=True, progress_bar=True)\n",
+    "    model.learn(total_timesteps=10000, callback=None, log_interval=5, tb_log_name='PPO', reset_num_timesteps=True, progress_bar=True)\n",
     "\n",
     "    \"\"\"\n",
     "    gamma = A higher gamma value (e.g., 0.99) means that the agent considers future rewards more heavily, which can lead to a longer-term focus in its learning. Conversely, a lower gamma value (e.g., 0.9) makes the agent prioritize immediate rewards.\n",
